--- a/src/app/shared/layout/modals/register-modal/parts/stepper-progress-bar/stepper-progress-bar.component.scss
+++ b/src/app/shared/layout/modals/register-modal/parts/stepper-progress-bar/stepper-progress-bar.component.scss
@@ -9,47 +9,6 @@
     padding: 10px 8px;
     align-items: center;
     gap: 6px;
-    border-bottom: 1px solid #0BE68D;
-    color: #000;
-}
-
-.circle-disabled{
-    display: flex;
-    width: 22px;
-    height: 22px;
-    padding: 10px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    flex-shrink: 0;
-    border-radius: 88px;
-    background: rgba(255, 255, 255, 0.50);
-    color: #FFF;
-}
-
-.circle-disabled{
-    display: flex;
-    width: 22px;
-    height: 22px;
-    padding: 10px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    flex-shrink: 0;
-    border-radius: 88px;
-    background: rgba(255, 255, 255, 0.50);
-    color: #FFF;
-}
-
-.circle-number {
-    color: #000;
-    font-weight: 600;
-}
-
-.circle-text {
-    color: rgba(255, 255, 255, 0.50);
 }
 
 .circle {
@@ -63,6 +22,42 @@
     gap: 10px;
     flex-shrink: 0;
     border-radius: 88px;
-    background: #0BE68D;
-    color: #000;
+    
 }
+
+.active{
+ 
+    border-bottom: 1px solid var(--highlight);
+
+    .circle {
+        background: var(--highlight);
+        color: #000;
+    }
+
+    .circle-text {
+        color: #FFF;
+    }
+}
+
+.deactived {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.20);
+    .circle {
+        background: rgba(255, 255, 255, 0.50);
+        color: #FFF;
+    }
+    .circle-text {
+        color: #FFF;
+    }
+}
+
+
+.circle-number {
+    color: #000;
+    font-weight: 600;
+}
+
+.circle-text {
+    color: rgba(255, 255, 255, 0.50);
+}
+
+
