Feat: Adjust personal component css and formcontrol name

--- a/src/app/shared/layout/modals/register-modal/parts/personal-data/personal-data.component.html
+++ b/src/app/shared/layout/modals/register-modal/parts/personal-data/personal-data.component.html
@@ -120,7 +120,7 @@
                                         <div>
                                             <div class="div-button-gender">
                                                 <div>
-                                                    <input type="radio" formControlName="loginMode" value="masculino">
+                                                    <input type="radio" formControlName="gender" value="masculino">
                                                 </div>
                                                 <div>
                                                     <span class="radio-custom">{{'genero.masculino' | translate}}</span>
@@ -138,7 +138,7 @@
                                         <div>
                                             <div class="div-button-gender">
                                                 <div>
-                                                    <input type="radio" formControlName="loginMode" value="masculino">
+                                                    <input type="radio" formControlName="gender" value="feminino">
                                                 </div>
                                                 <div>
                                                     <span class="radio-custom">{{'genero.feminino' | translate}}</span>
@@ -156,7 +156,7 @@
                                         <div>
                                             <div class="div-button-gender">
                                                 <div>
-                                                    <input type="radio" formControlName="loginMode" value="masculino">
+                                                    <input type="radio" formControlName="gender" value="outros">
                                                 </div>
                                                 <div>
                                                     <span class="radio-custom">{{'genero.outros' | translate}}</span>
