--- a/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.css
+++ b/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.css
@@ -327,6 +327,7 @@ hr {
         margin: 3px;
         margin-top: 0px;
         font-size: 12px;
+        border-radius: 10px;
     }
     #cupom {
         background-color: var(--game);
