--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -140,3 +140,76 @@ img{
         display: flex !important;
     }
 }
+
+.modal-over18Message {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(8px);
+}
+
+.modal-content-over18Message {
+    background-color: var(--background);
+    padding: 20px;
+    border-radius: 4px;
+    width: 450px;
+    text-align: center;
+}
+
+.modal-header-over18Message {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.modal-title-over18Message {
+    color: #ffff;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+    margin-top: 30px;
+    margin-bottom: 5px;
+}
+
+.modal-body-over18Message {
+    color: rgba(255, 255, 255, 0.5);
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 13px;
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.modal-footer-over18Message {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 0 20px;
+}
+
+.btn-yes,
+.btn-no {
+    width: 48%;
+    text-align: center;
+}
+
+.btn-yes {
+    background-color: var(--highlight);
+}
+
+.modal-logo {
+    max-width: 250px;
+    margin-bottom: 15px;
+}
+
