--- a/src/app/shared/layout/footer/footer.component.css
+++ b/src/app/shared/layout/footer/footer.component.css
@@ -56,7 +56,7 @@ h2{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
-    gap: 32px;
+    gap: 16px;
 }
 
 .licences img{
@@ -410,9 +410,6 @@ footer {
 }
 
 @media only screen and (min-width: 425px){
-    .licences {
-        padding-top: 24px;
-    }
 
     .links-redes {
         display: flex;
@@ -447,6 +444,11 @@ footer {
         flex-direction: column;
     }
 
+    .licences {
+        align-items: center;
+        width: 100%;
+    }
+
     .restricted-adults-container { order: 2; }
     .game-therapy { order: 1; }
     .left-container { order: 1; }
@@ -458,6 +460,8 @@ footer {
         flex-direction: row;
         padding-right: 8px !important;
         align-items: center;
+        justify-content:center;
+        gap: 16px;
     }
 
     #right-container h2 {
@@ -507,6 +511,9 @@ footer {
 @media only screen and (min-width: 768px) {
     .links {
         gap: 20px !important;
+    }
+    .separetor-mobile {
+        display: none;
     }
 }
 
