--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -169,7 +169,7 @@
                     </div>
                     <div class="licences" *ngIf="hasLicence">
                         <h2>{{"footer.licences" | translate}}</h2>
-                        <div class="licences-images">
+                        <div class="licences-images" [ngStyle]="{'grid-template-columns': licences.length >1 ? 'repeat(2, 1fr)' : 'repeat(1, 1fr)'}">
                             <img class="licence" src="https://cdn.wee.bet/img/accreditors/gcb-orange.svg" alt="" *ngIf="hasCuracaoTemporary">
                             <img class="licence" src="https://wb-assets.com/img/accreditors/gcb-green.svg" alt="" *ngIf="hasCuracao">
                             <img class="licence" src="https://cdn.wee.bet/img/accreditors/lotserido.svg" alt="" *ngIf="hasBodo">
@@ -181,7 +181,7 @@
                 </div>
             </div>
         </div>
-        <div class="separator">
+        <div class="separator" *ngIf="hasLicence">
         </div>
         <div class="info-jogo">
             <div *ngIf="this.slug == 'zilionz.com'" class="icons" style="margin-bottom: 30px; gap: 0">
