--- a/src/app/shared/layout/modals/register-modal/parts/navigation-bar/navigation-bar.component.html
+++ b/src/app/shared/layout/modals/register-modal/parts/navigation-bar/navigation-bar.component.html
@@ -1,5 +1,5 @@
 <div class="footer-register">
-    <button [ngClass]="{'active-button': currentIndex === 0}"
+    <button class='deactive-button'
         [disabled]="currentIndex === 0"
         (click)="previous()">
         Anterior
