--- a/src/app/shared/layout/modals/register-modal/parts/address-data/address-data.component.scss
+++ b/src/app/shared/layout/modals/register-modal/parts/address-data/address-data.component.scss
@@ -1,24 +1,12 @@
-.flex-row {
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
-}
-
-
 .div-button-personalized {
     display: flex;
     height: 44px;
     flex-direction: column;
     border-radius: 4px;
-    border: 1px solid rgba(var(--foreground-inputs-odds-rgb), .3);
     color: var(--foreground-inputs-odds);
     background: var(--inputs-odds);
     max-height: 44px;
     gap: 4px;
-}
-
-.input-style {
-    border: 1px solid rgba(var(--foreground-inputs-odds-rgb), .3);
 }
 
 .label-personalized {
@@ -29,6 +17,17 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.input-style {
+    padding-right: 14px;
+    border: 1px solid rgba(var(--foreground-inputs-odds-rgb), .3);
 }
 
 .style-select {
@@ -46,4 +45,21 @@
 
 select:focus {
     border: none;
+}
+
+.text-input{
+    color: rgba(var(--foreground-inputs-odds-rgb), .3);
+    padding-left: 5px;
+}
+
+@media screen and (max-width: 320px) {
+
+    .input-style {
+        padding-right: 4px;
+    }
+
+    .style-select {
+        font-size: 12px;
+    }
+    
 }
