--- a/src/app/shared/layout/modals/register-modal/parts/login-data/login-data.component.html
+++ b/src/app/shared/layout/modals/register-modal/parts/login-data/login-data.component.html
@@ -1,1 +1,302 @@
-<p>login-data works!</p>
+<form [formGroup]="form" (ngSubmit)="onSubmit()" novalidate>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form-group mb-4" [ngClass]="applyCssDivError('email')">
+                <div class="input-md">
+                    <input type="text" id="email" class="form-control inverted-out"
+                        [ngClass]="applyCssInputError('email')" formControlName="email"
+                        placeholder=" " (beforeinput)="onBeforeInput($event, 'email')">
+                    <label for="email">{{'geral.email' | translate}}</label>
+                </div>
+                <app-error-msg [control]="form.get('email')" label="{{'geral.email' | translate}}"
+                    class="text-left"></app-error-msg>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="form-group mb-4">
+                <div class="input-md">
+                    <input
+                        type="text"
+                        id="countryCode"
+                        mask="00"
+                        class="form-control inverted-out"
+                        formControlName="countryCode"
+                        [ngClass]="applyCssInputError('countryCode')"
+                        placeholder=" "
+                        [dropSpecialCharacters]="false"
+                        prefix="+"
+                        inputmode="numeric"
+                    >
+                    <label for="countryCode">{{'geral.countryCode' | translate}}</label>
+                </div>
+                <app-error-msg [control]="form.get('countryCode')" label="{{'geral.countryCode' | translate}}"
+                               class="text-left"></app-error-msg>
+            </div>
+        </div>
+        <div class="col-md-8">
+            <div class="form-group mb-4">
+                <div class="input-md">
+                    <input
+                        type="text"
+                        id="telefone"
+                        mask="(00)00000-0000"
+                        class="form-control inverted-out"
+                        formControlName="telefone"
+                        [ngClass]="applyCssInputError('telefone')"
+                        placeholder=" "
+                        [dropSpecialCharacters]="false"
+                        inputmode="numeric"
+                    >
+                    <label for="telefone">{{'geral.telefone' | translate}}</label>
+                </div>
+                <app-error-msg [control]="form.get('telefone')" label="{{'geral.telefone' | translate}}"
+                               class="text-left"></app-error-msg>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="row my-5" *ngIf="fullRegistration">
+        <div class="col-md-9">
+            <div class="form-group mb-4">
+                <div class="input-md">
+                    <input type="text" id="logradouro" class="form-control inverted-out" formControlName="logradouro"
+                        [ngClass]="applyCssInputError('logradouro')" placeholder=" " [dropSpecialCharacters]="false">
+                    <label for="cpf">{{'geral.logradouro' | translate}}</label>
+                </div>
+
+                <app-error-msg [control]="form.get('logradouro')" label="{{'geral.logradouro' | translate}}"
+                    class="text-left"></app-error-msg>
+            </div>
+        </div>
+
+        <div class="col-md-3" *ngIf="fullRegistration">
+            <div class="form-group mb-4">
+                <div class="input-md">
+                    <input type="number" id="numero" class="form-control inverted-out" formControlName="numero"
+                        [ngClass]="applyCssInputError('numero')" placeholder=" " [dropSpecialCharacters]="false"
+                        inputmode="numeric">
+                    <label for="cpf">{{'geral.numero' | translate}}</label>
+                </div>
+
+                <app-error-msg [control]="form.get('numero')" label="{{'geral.numero' | translate}}"
+                    class="text-left"></app-error-msg>
+            </div>
+        </div>
+
+        <div class="col-md-6" *ngIf="fullRegistration">
+            <div class="form-group mb-4">
+                <div class="input-md">
+                    <input type="text" id="cep" class="form-control inverted-out" formControlName="cep"
+                        mask="00.000-000" [ngClass]="applyCssInputError('cep')" placeholder=" "
+                        [dropSpecialCharacters]="false" inputmode="numeric">
+                    <label for="cpf">{{'geral.cep' | translate}}</label>
+                </div>
+
+                <app-error-msg [control]="form.get('cep')" label="{{'geral.cep' | translate}}"
+                    class="text-left"></app-error-msg>
+            </div>
+        </div>
+
+        <div class="col-md-6" *ngIf="fullRegistration">
+            <div class="form-group mb-4">
+                <div class="input-md">
+                    <input type="text" id="bairro" class="form-control inverted-out" formControlName="bairro"
+                        [ngClass]="applyCssInputError('bairro')" placeholder=" " [dropSpecialCharacters]="false">
+                    <label for="cpf">{{'geral.bairro' | translate}}</label>
+                </div>
+
+                <app-error-msg [control]="form.get('bairro')" label="{{'geral.bairro' | translate}}"
+                    class="text-left"></app-error-msg>
+            </div>
+        </div>
+
+        <div class="col-md-6" *ngIf="fullRegistration">
+            <div class="form-group input-md placeholder-active">
+                <select formControlName="estado" type="text" class="form-control inverted-out"
+                    (change)="getCities($event)">
+                    <option value="">{{'geral.selecione' | translate}}</option>
+                    <option *ngFor="let state of states" [value]="state.id">
+                        {{ state.nome }}
+                    </option>
+                </select>
+                <label for="nome">{{'geral.estado' | translate}}</label>
+                <app-error-msg [control]="form.get('estado')"></app-error-msg>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- <div class="row" *ngIf="!formSocial"> -->
+       
+        <div class="row">
+        <div class="col-md-12">
+            <div class="form-group" [ngClass]="applyCssDivError('senha')">
+                <div class="input-md">
+                    <input [type]="mostrarSenha ? 'text' : 'password'" id="password" class="form-control inverted-out"
+                        [ngClass]="applyCssInputError('senha')" formControlName="senha" placeholder=" "
+                        (beforeinput)="onBeforeInput($event, 'password')"
+                        (input)="isStrengthPassword ? checkPassword() : null">
+                    <label for="password">{{'geral.senha' | translate}}</label>
+                    <i class="fa showPassword" [ngClass]="mostrarSenha ? 'fa-eye-slash' : 'fa-eye'"
+                        (click)="mostrarSenha = !mostrarSenha"></i>
+                </div>
+
+                <app-error-msg [control]="form.get('senha')" label="{{'geral.senha' | translate}}"
+                    class="text-left"></app-error-msg>
+                    <!-- <div *ngIf="form.get('password')?.touched && form.get('password')?.invalid">
+                        <ul class="tooltip">
+                          <li *ngFor="let requirement of passwordRequirements">{{ requirement }}</li>
+                        </ul>
+                      </div> -->
+
+                <ul class="requirements-password" *ngIf="isStrengthPassword">
+                    <li
+                        [ngClass]="{'fulfilled': requirements.minimumCharacters, 'unfulfilled': !requirements.minimumCharacters}">
+                        <i
+                            [ngClass]="{'bi bi-check-circle': requirements.minimumCharacters, 'bi bi-x-circle': !requirements.minimumCharacters}"></i>
+                        {{'senhas.minimumCharactersPassword' | translate}}
+                    </li>
+                    <li
+                        [ngClass]="{'fulfilled': requirements.lowercaseLetter, 'unfulfilled': !requirements.lowercaseLetter}">
+                        <i
+                            [ngClass]="{'bi bi-check-circle': requirements.lowercaseLetter, 'bi bi-x-circle': !requirements.lowercaseLetter}"></i>
+                        {{'senhas.lowercaseLetter' | translate}}
+                    </li>
+                    <li
+                        [ngClass]="{'fulfilled': requirements.uppercaseLetter, 'unfulfilled': !requirements.uppercaseLetter}">
+                        <i
+                            [ngClass]="{'bi bi-check-circle': requirements.uppercaseLetter, 'bi bi-x-circle': !requirements.uppercaseLetter}"></i>
+                        {{'senhas.uppercaseLetter' | translate}}
+                    </li>
+                    <li [ngClass]="{'fulfilled': requirements.specialChar, 'unfulfilled': !requirements.specialChar}">
+                        <i
+                            [ngClass]="{'bi bi-check-circle': requirements.specialChar, 'bi bi-x-circle': !requirements.specialChar}"></i>
+                        {{'senhas.specialChar' | translate}}
+                    </li>
+                </ul>
+
+                <!-- <small *ngIf="!isStrengthPassword" class="form-text text-muted">{{'geral.requisitosSenha' |
+                    translate}}</small> -->
+            </div>
+        </div>
+    </div>
+    <!-- <div class="row" *ngIf="!formSocial && !isLoterj"> -->
+        <div class="row">
+            
+        <div class="col-md-12">
+            <div class="form-group mb-4">
+                <div class="input-md">
+                    <input [type]="mostrarConfirmarSenha ? 'text' : 'password'" id="confirmarSenha"
+                        class="form-control inverted-out" formControlName="senha_confirmacao"
+                        [ngClass]="applyCssInputError('senha_confirmacao')" placeholder=" "
+                        (beforeinput)="onBeforeInput($event, 'password')">
+                    <label for="confirmarSenha">{{'senhas.confirmarSenha' | translate}}</label>
+                    <i class="fa showPassword" [ngClass]="mostrarConfirmarSenha ? 'fa-eye-slash' : 'fa-eye'"
+                        (click)="mostrarConfirmarSenha = !mostrarConfirmarSenha"></i>
+                </div>
+                <div *ngIf="form.get('password')?.touched && form.get('password')?.invalid">
+                    <ul class="tooltip">
+                      <li *ngFor="let requirement of passwordRequirements">{{ requirement }}</li>
+                    </ul>
+                  </div>
+                <app-error-msg [control]="form.get('senha_confirmacao')" label="{{'senhas.confirmarSenha' | translate}}"
+                    class="text-left"></app-error-msg>
+            </div>
+        </div>
+    </div>
+    <div class="row" *ngIf="afiliadoHabilitado">
+        <div class="col-md-12">
+            <div class="form-group mb-4" [ngClass]="applyCssDivError('afiliado')">
+                <div class="input-md">
+                    <input type="text" id="afiliado" class="form-control inverted-out"
+                        [ngClass]="applyCssInputError('afiliado')" formControlName="afiliado" placeholder=" "
+                        [readonly]="possuiCodigoAfiliado">
+                    <label for="afiliado">{{'geral.codigoDeAfiliacao' | translate}}</label>
+                </div>
+
+                <app-error-msg [control]="form.get('afiliado')" label="Código de afiliação(Opcional)"
+                    class="text-left"></app-error-msg>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <label *ngIf="!isLoterj" [ngClass]="{ 'label-termo-uso': aplicarCssTermo }">
+                {{'geral.deAcordoComOsTermos1' | translate}}
+                <a id="linkTermos" target="_blank" [routerLink]="['/informacoes/termos-condicoes']"
+                    class="link-termos-politica"> {{'geral.termosDeUso' | translate | lowercase}}</a>
+                {{'geral.deAcordoComOsTermos2' | translate}}
+                <a id="linkPolitica" target="_blank" [routerLink]="['/informacoes/politica-privacidade']"
+                    class="link-termos-politica"> {{'footer.politicaDePrivacidade' | translate | lowercase}}</a>.
+            </label>
+            <label *ngIf="isLoterj" [ngClass]="{ 'label-termo-uso': aplicarCssTermo }">
+                <input type="checkbox" id="termosUso" formControlName="termosUso">
+                <div>
+                    {{'geral.certificoQueTenhoMais' | translate}}
+                    <a id="linkTermos" target="_blank" [routerLink]="['/informacoes/termos-condicoes']"
+                        class="link-termos-politica"> {{'geral.termosDeUso' | translate | lowercase}}</a>
+                    {{'geral.deAcordoComOsTermos2' | translate}}
+                    <a id="linkPolitica" target="_blank" [routerLink]="['/informacoes/politica-privacidade']"
+                        class="link-termos-politica"> {{'footer.politicaDePrivacidade' | translate | lowercase}}</a>.
+                </div>
+                <app-error-msg [control]="form.get('termosUso')" class="text-left"></app-error-msg>
+            </label>
+        </div>
+    </div>
+
+    <input type="hidden" formControlName="check_1">
+    <input type="text" formControlName="check_2" class="d-none">
+
+    <input type="hidden" formControlName="btag">
+
+    <div class="row captcha" *ngIf="provedorCaptcha == 'hcaptcha'">
+        <div class="col-12">
+            <ng-hcaptcha formControlName="captcha" [languageCode]="hCaptchaLanguage"></ng-hcaptcha>
+            <app-error-msg [control]="form.get('captcha')"></app-error-msg>
+        </div>
+
+        <ng-container *ngTemplateOutlet="registerErrorTemplate"/>
+
+            <div class="col-12">
+                <button type="submit" class="btn btn-custom btn-block btn-cadastrar" [disabled]="submitting || (faceMatchEnabled && !faceMatchRequested)">{{'geral.cadastrar' | translate}}</button>
+            </div>
+        </div>
+
+    <div class="row" *ngIf="provedorCaptcha == 'recaptcha'">
+        <div class="col-12" [ngStyle]="{'text-align': 'left', 'margin-top': '10px'}">
+            <re-captcha  class="grecaptcha-badge" formControlName="captcha" #captchaRef="reCaptcha" (resolved)="onSubmit()" errorMode="handled" size="invisible" ></re-captcha>
+            {{ 'register.protectedByReCaptchaPart1' | translate }}
+            <a href="https://policies.google.com/privacy" target="_blank" class="link-termos-politica">{{ 'register.protectedByReCaptchaPart2' | translate }}</a> {{ 'register.protectedByReCaptchaPart3' | translate }}
+            <a href="https://policies.google.com/terms" target="_blank" class="link-termos-politica">{{ 'register.protectedByReCaptchaPart4' | translate }}</a> {{ 'register.protectedByReCaptchaPart5' | translate }}
+        </div>
+        <ng-container *ngTemplateOutlet="registerErrorTemplate"/>
+        <div class="col-12">
+            <button type="submit" (click)="captchaRef.execute()" class="btn btn-custom btn-block btn-cadastrar" [disabled]="submitting || (faceMatchEnabled && !faceMatchRequested)">{{'geral.cadastrar' | translate}}</button>
+        </div>
+        <div class="login">
+            {{'geral.jaPossuiUmaConta' | translate}}
+            <a (click)="abrirLogin()">{{'geral.entrarNaConta' | translate}}</a>
+        </div>
+    </div>
+
+    <div class="row" *ngIf="!provedorCaptcha">
+        <div class="col-12" [ngStyle]="{'text-align': 'left', 'margin-top': '10px'}">
+            <a href="https://policies.google.com/privacy" target="_blank" class="link-termos-politica">Política de Privacidade</a> do Google e os
+            <a href="https://policies.google.com/terms" target="_blank" class="link-termos-politica">Termos de Serviço</a> se aplicam.
+        </div>
+
+        <ng-container *ngTemplateOutlet="registerErrorTemplate"/>
+
+        <div class="col-12">
+            <button type="submit" class="btn btn-custom btn-block btn-cadastrar" [disabled]="submitting">{{'geral.cadastrar' | translate}}</button>
+        </div>
+        <div class="login">
+            {{'geral.jaPossuiUmaConta' | translate}}
+            <a (click)="abrirLogin()">{{'geral.entrarNaConta' | translate}}</a>
+        </div>
+    </div>
+
+</form>
