--- a/src/app/shared/layout/modals/register-modal/parts/personal-data/personal-data.component.scss
+++ b/src/app/shared/layout/modals/register-modal/parts/personal-data/personal-data.component.scss
@@ -38,6 +38,10 @@
     font-weight: 400;
 }
 
+.radio-custom {
+    color: rgba(var(--foreground-inputs-odds-rgb), .3);
+}
+
 select:focus {
     border: none;
 }
@@ -81,6 +85,17 @@ select:focus {
     flex: 1;
 }
 
+.input-md:hover {
+    border: 1px solid var(--highlight);
+    border-radius: 5px;
+}
+
+
+.input-md:has(input[type="radio"]:checked) {
+    border: 1px solid var(--highlight);
+    border-radius: 5px;
+}
+
 .label-personalized-gender {
     max-height: 10px;
     padding-left: 14px;
@@ -97,17 +112,51 @@ select:focus {
     gap: 10px;
     flex-direction: column;
 }
+.dropdown-btn[_ngcontent-gni-c119]{
+    display: flex !important;
+    border: none !important;
+}
+
+.dropdown-list .item2 {
+    background-color: var(--background) !important;
+}
 
 input[type=radio] {
-    appearance: none;
-    border: 1px solid rgba(var(--foreground-inputs-odds-rgb), .3);
-    border-radius: 100%;
-    padding: 8px;
+    display: none;
 }
 
-input[type=radio]:checked{
-    background-color: var(--highlight);
+.radio-custom {
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    border: 2px solid rgba(255, 255, 255, 50%);
+    background: var(--background);
+    margin-right: 10px;
+    position: relative;
+    display: flex;
 }
+
+.radio-custom::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: var(--highlight);
+    transform: translate(-50%, -50%);
+    opacity: 0;
+}
+
+.custom-radio input[type="radio"]:checked+.radio-custom {
+    border-color: var(--highlight);
+}
+
+.custom-radio input[type="radio"]:checked+.radio-custom::after {
+    opacity: 1;
+}
+
 
 
 @media screen and (max-width: 320px) {
