--- a/src/app/clientes/deposito/pix/deposito-pix.component.html
+++ b/src/app/clientes/deposito/pix/deposito-pix.component.html
@@ -152,7 +152,7 @@
                                 ></i>
                             </h3>
                             <div id="promo-code-wrapper">
-                                <input class="form-control inverted-out" formControlName="promoCode" [attr.placeholder]="'geral.promoCodePlaceholder' | translate">
+                                <input class="form-control inverted-out promo-code" formControlName="promoCode" [attr.placeholder]="'geral.promoCodePlaceholder' | translate">
                             </div>
                         </div>
                         <div class="details-submit">
